app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

header h1 {
  color: white;
  /*background-color: white;*/
  margin: 0 auto;
  padding: 10px 0;
  width: 170px;
  border: 15px solid #ffd147;
}

footer {
  color: white;
  margin-bottom: 0;
  position: absolute;
}

header, footer {
  padding: 10px;
  background: tomato;
  width: 100%;
  text-align: center;
}

.flex-container {
  max-width: 1024px;
  margin: 0 auto 10px auto;

  -ms-box-orient: horizontal;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -moz-flex;
  display: -webkit-flex;
  display: flex;

  -webkit-justify-content: space-around;
  justify-content: space-around;
  -webkit-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: stretch;
  align-items: stretch;
}

body {
  background-color: #f8f8f8;
  font-family: Helvetica, Arial, sans-serif;
  margin: 0;
  min-height: 100%;
  padding: 0;
}

html {
  min-height: 100%;
  margin: 0;
  padding: 0;
}

